Unity/Assets/akanevrc/TeuchiUdon/Tests/src/Controls/If3.teuchi
// error
if true then let x = 100;
